syntax = "proto3";

package resources.accounts;
option go_package = "github.com/galexrt/fivenet/proto/resources/accounts;accounts";

import "resources/timestamp/timestamp.proto";

message OAuth2Account {
  uint64 account_id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  string provider_name = 3;
  OAuth2Provider provider = 4;
  uint64 external_id = 5;
  string username = 6;
  string avatar = 7;
}

message OAuth2Provider {
  string name = 1;
  string label = 2;
  string homepage = 3;
}
